--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,10 @@
-# graft docs
+graft docs
 graft src
 graft tests
 
 include *.rst
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
+
+include *.txt
+include tox.ini
