--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,3 @@
-graft docs
 graft src
 graft tests
 
@@ -8,3 +7,9 @@ global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 include *.txt
 include tox.ini
+
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
+
+global-exclude docs/*
