--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,7 +11,9 @@ include tox.ini
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
+recursive-include notebooks *.ipynb
 
+global-exclude notebooks/.ipynb_checkpoints/*
 global-exclude docs/*
 
 exclude legacy
