improvements for bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,5 @@
 [bumpversion]
 current_version = 0.1.0
 
-[bumpversion:file:setup.py]
-
+[bumpversion:file:src/pybel/__init__.py]
 [bumpversion:file:docs/source/conf.py]
