added bump to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 include *.txt
 include tox.ini
+include .bumpversion.cfg
 
 recursive-include docs *.py
 recursive-include docs *.rst
