--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
     - pip install tox
 
 script:
-    - coverage run -m pytest tests
+    - tox
 
 after_success:
     - tox -e coverage-report
