--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = coverage-clean, py35, manifest, docs, coverage-report
 
 [testenv]
-commands = coverage run --parallel -m pytest tests {posargs}
+commands = coverage run -m pytest tests {posargs}
 deps =
     coverage
     pytest
