--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,8 +7,7 @@ global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 include *.txt
 include tox.ini
-include .bumpversion.cfg
-exclude codecov.yml
+exclude .codecov.yml .bumpversion.cfg .coveragerc
 
 recursive-include docs *.py
 recursive-include docs *.rst
