--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 include *.txt
 include tox.ini
-exclude .codecov.yml .bumpversion.cfg .coveragerc
+exclude .codecov.yml .bumpversion.cfg .coveragerc .codeclimate.yml
 
 recursive-include docs *.py
 recursive-include docs *.rst
