--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
     - "2.7"
     - "3.4"
     - "3.5"
+    - "3.6"
 env:
     - TOXENV=manifest
     - TOXENV=docs
@@ -19,6 +20,8 @@ matrix:
           env: TOXENV=py34
         - python: "3.5"
           env: TOXENV=py35
+        - python: "3.6"
+          env: TOXENV=py36
 
 before_install:
     - pip install codecov
