--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
           env: TOXENV=py35
         - python: "3.6"
           env: TOXENV=py36
+    allow_failures:
+        - python: "3.6"
 
 before_install:
     - pip install codecov
