--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: python
 
 python:
     - "2.7"
+    - "3.3"
     - "3.4"
     - "3.5"
     - "3.6"
@@ -16,14 +17,14 @@ matrix:
     include:
         - python: "2.7"
           env: TOXENV=py27
+        - python: "3.3"
+          env: TOXENV=py33
         - python: "3.4"
           env: TOXENV=py34
         - python: "3.5"
           env: TOXENV=py35
         - python: "3.6"
           env: TOXENV=py36
-    allow_failures:
-        - python: "3.6"
 
 before_install:
     - pip install codecov
