--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     coverage
     pytest
     mock
+    git+git://github.com/pybel/pybel-test-extension.git
 whitelist_externals =
     /bin/cat
     /bin/cp
