--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands = coverage run --parallel -m pytest tests {posargs}
 deps =
     coverage
     pytest
+    mock
 whitelist_externals =
     /bin/cat
     /bin/cp
