--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ changedir = docs
 deps =
     sphinx
     sphinx_rtd_theme
+    mock
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
