--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ matrix:
     exclude:
         - python: "3.3"
           env: TOXENV=docs
+    allow_failures:
+    - python: "3.3"
 
 before_install:
     - pip install codecov
