--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,13 @@ envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
+passenv = NDEX_USERNAME NDEX_PASSWORD
 deps =
     coverage
     pytest
     mock
     pathlib
+    six
     git+git://github.com/pybel/pybel-test-extension.git
 whitelist_externals =
     /bin/cat
