Switch too back to coverage

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,11 @@
 envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
-commands = python -m nose tests {posargs}
+commands = coverage run --parallel -m pytest tests {posargs}
 passenv = NDEX_USERNAME NDEX_PASSWORD
 deps =
     coverage
     pytest
-    nose
     mock
     pathlib
     six
