--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
-passenv = NDEX_USERNAME NDEX_PASSWORD
+passenv = PYBEL_CONNECTION NDEX_USERNAME NDEX_PASSWORD
 deps =
     coverage
     pytest
