Turn on mysql tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,13 @@ envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
-passenv = PYBEL_CONNECTION NDEX_USERNAME NDEX_PASSWORD
+passenv = PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD
 deps =
     coverage
     pytest
     mock
     pathlib
+    pymysql
     six
     git+git://github.com/pybel/pybel-test-extension.git
 whitelist_externals =
