--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,13 @@ python:
 env:
   global:
     - PYBEL_TEST_CONNECTION=mysql+pymysql://travis@localhost/pybel?charset=utf8'
-  matrix:
-    - TOXENV=docs
 
 matrix:
     include:
+        - python: 3.6
+          env: TOXENV=docs
         - python: "2.7"
           env: TOXENV=py27
-        - python: "3.4"
-          env: TOXENV=py34
-        - python: "3.5"
-          env: TOXENV=py35
         - python: "3.6"
           env: TOXENV=py36
 
