--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,26 @@ services:
 language: python
 
 python:
-    - "2.7"
-    - "3.4"
-    - "3.5"
-    - "3.6"
+    - 2.7
+    - 3.6
 env:
   global:
     - PYBEL_TEST_CONNECTION=mysql+pymysql://travis@localhost/pybel?charset=utf8'
+  matrix:
+    - TOXENV=docs
 
 matrix:
     include:
         - python: 3.6
           env: TOXENV=docs
-        - python: "2.7"
-          env: TOXENV=py27
-        - python: "3.6"
+        - python: 3.6
           env: TOXENV=py36
+        - python: 2.7
+          env: TOXENV=py27
+    exclude:
+        - python: 2.7
+          env: TOXENV=docs
+
 
 jobs:
   include:
