Turn on verbose pytest

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
-commands = coverage run -p -m pytest tests {posargs}
+commands = coverage run -p -m pytest tests -v {posargs}
 passenv = PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD
 deps =
     coverage
