Add better bump version stuff
[skip ci]

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -23,6 +23,10 @@ values = [0-9A-Za-z-]+
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
+[bumpversion:file:src/pybel/utils.py]
+search = '{current_version}'
+replace = '{new_version}'
+
 [bumpversion:file:docs/source/conf.py]
 search = release = '{current_version}'
 replace = release = '{new_version}'
