Update version management

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -27,3 +27,7 @@ replace = __version__ = '{new_version}'
 search = release = '{current_version}'
 replace = release = '{new_version}'
 
+[bumpversion:file:src/pybel/constants.py]
+search = VERSION = '{current_version}'
+replace = VERSION = '{new_version}'
+
