Gpickles will never be included

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ recursive-include docs/source *.py
 recursive-include docs/source *.rst
 recursive-include docs Makefile
 
-global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
+global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
 exclude .bumpversion.cfg
 include *.rst *.txt *.yml LICENSE tox.ini docs/Makefile .coveragerc
