Update travis options

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ python:
     - 3.5
     - 3.4
     - 2.7
-    - pypy3
 
 env:
   global:
@@ -25,13 +24,12 @@ matrix:
           env: TOXENV=docs
         - python: 3.6
           env: TOXENV=manifest
-    allow_failures:
-        - python: pypy3
 
 before_install:
     - pip install codecov
     - pip install pymysql
     - mysql -e 'CREATE DATABASE pybel;'
+    - mysql -e "GRANT ALL PRIVILEGES ON pybel.* to 'travis'@'%' WITH GRANT OPTION;"
 
 install:
     - pip install tox
