--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
+envlist = coverage-clean, manifest, docs, py27, py36, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
@@ -49,3 +49,11 @@ skip_install = true
 commands =
     coverage combine
     coverage report
+
+[testenv:rst-lint]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
+
