Add travis ci passenv to Tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = coverage-clean, manifest, docs, py27, py36, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
-passenv = PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD
+passenv = PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI
 deps =
     coverage
     pytest
