Update coverage settings

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,10 @@
 [run]
 branch = True
 source = pybel
+omit =
+    src/pybel/__main__.py
+    src/pybel/cli.py
+    tests/*
 
 [paths]
 source =
@@ -9,3 +13,6 @@ source =
 
 [report]
 show_missing = True
+exclude_lines =
+    def __str__
+    def __repr__
