--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 networkx==1.11
+sqlalchemy==1.1.15
+click
 requests
 requests_file
 pyparsing
+six
+
+# Extras
 configparser
 py2neo
-click
-sqlalchemy==1.1.15
 onto2nx
 ndex2
-six
