Add extras flag to tox configuration
Tox wasn't getting the requirements even though they were listed in requirements.txt, so hopefully this provides a fix.

Reference: http://tox.readthedocs.io/en/latest/config.html#confval-extras=MULTI-LINE-LIST

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,10 @@ deps =
     pathlib
     pymysql
     git+git://github.com/pybel/pybel-test-extension.git
+extras =
+    owl
+    ndex
+    neo4j
 whitelist_externals =
     /bin/cat
     /bin/cp
