Turn off coverage checking on extras

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,6 +6,9 @@ omit =
     src/pybel/cli.py
     src/pybel/io/indra.py
     src/pybel/io/web.py
+    src/pybel/resources/arty.py
+    src/pybel/resources/deploy.py
+    src/pybel/resources/defaults.py
     tests/*
     docs/*
 
