Revert "Merged develop"
This reverts commit e6dd048d5eabe986c33bd2116ebae8959850f91d.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 networkx==1.11
-sqlalchemy==1.1.15
-click
 requests
 requests_file
 pyparsing
-six
-
-# Extras
 configparser
 py2neo
+click
+sqlalchemy==1.1.14
 onto2nx
-ndex2
+ndex
+six
