--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_script:
 before_install:
     - pip install codecov
     - sh -c "if [ '$DB' = 'postgres' ]; then pip install psycopg2; fi"
-    - sh -c "if [ '$DB' = 'mysql' ]; then; pip install pymysql; fi"
+    - sh -c "if [ '$DB' = 'mysql' ]; then pip install pymysql; fi"
 
 install:
     - pip install tox
