--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,13 @@ envlist = coverage-clean, manifest, docs, py27, py36, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
-passenv = PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI
 deps =
     coverage
     pytest
     mock
     pathlib
-    pymysql
+    {env:PYBEL_TEST_CONNECTOR:}
     git+git://github.com/pybel/pybel-test-extension.git
 extras =
     owl
