--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,19 @@ python:
     - 2.7
 
 env:
-  - TOXENV=py DB=mysql    PYBEL_TEST_CONNECTOR=pymysql  PYBEL_TEST_CONNECTION=mysql+pymysql://travis@localhost/test?charset=utf8
-  - TOXENV=py DB=postgres PYBEL_TEST_CONNECTOR=psycopg2 PYBEL_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
+  - TOXENV=py DB=mysql
+    PYBEL_TEST_CONNECTOR=pymysql
+    PYBEL_TEST_CONNECTION=mysql+pymysql://travis@localhost/test?charset=utf8
+  - TOXENV=py DB=postgres
+    PYBEL_TEST_CONNECTOR=psycopg2
+    PYBEL_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
   - TOXENV=py DB=sqlite
 
 matrix:
     include:
-        - python: 3.6
-          env: TOXENV=docs
-        - python: 3.6
-          env: TOXENV=manifest
-        - python: 3.6
-          env: TOXENV=rst-lint
+        - env: TOXENV=docs
+        - env: TOXENV=manifest
+        - env: TOXENV=rst-lint
 
 before_script:
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS tests;' -U postgres; fi"
