--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = coverage-clean, manifest, docs, py, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
-passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI DB
 deps =
     coverage
     pytest
