Update tox and requirements file names

--- a/tox.ini
+++ b/tox.ini
@@ -61,3 +61,38 @@ deps =
     restructuredtext_lint
     pygments
 
+[testenv:build]
+basepython = python3
+skip_install = true
+deps =
+    wheel
+    setuptools
+commands =
+    python setup.py -q sdist bdist_wheel
+
+[testenv:release]
+basepython = python3
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing dist/*
+
+[testenv:finish]
+basepython = python3
+skip_install = true
+whitelist_externals =
+    /bin/git
+    /usr/local/bin/git
+deps =
+    {[testenv:build]deps}
+    {[testenv:release]deps}
+    bumpversion
+commands =
+    {[testenv:build]commands}
+    bumpversion release
+    {[testenv:release]commands}
+    git push
+    bumpversion patch
