Update travis and tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = coverage-clean, manifest, docs, py, coverage-report, rst-lint
+envlist = coverage-clean, manifest, docs, py, coverage-report, readme
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
@@ -54,7 +54,7 @@ commands =
     coverage combine
     coverage report
 
-[testenv:rst-lint]
+[testenv:readme]
 commands = rst-lint README.rst
 skip_install = true
 deps =
