--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,22 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = coverage-clean, manifest, docs, py, coverage-report, readme
+envlist =
+    # always keep coverage-clean first
+    coverage-clean
+    # code linters/stylers
+    manifest
+    #flake8
+    #pylint
+    # documentation linters/checkers
+    doc8
+    doc8-readme
+    readme
+    docs
+    # the actual tests
+    py
+    # always keep coverage-report last
+    coverage-report
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
@@ -34,6 +49,53 @@ deps = check-manifest
 skip_install = true
 commands = check-manifest
 
+[testenv:flake8]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    flake8-bandit
+    flake8-colors
+    flake8-docstrings
+    flake8-import-order
+    pep8-naming
+commands =
+    flake8 src/pybel/ tests/ setup.py
+description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
+
+[testenv:pylint]
+basepython = python3
+deps =
+    pyflakes
+    pylint
+commands =
+    pylint src/pybel
+
+[testenv:doc8]
+basepython = python3
+skip_install = true
+deps =
+    sphinx
+    doc8
+commands =
+    doc8 docs/source/
+description = Run the doc8 tool to check the style of the RST files in the project docs.
+
+[testenv:doc8-readme]
+deps =
+    doc8
+    pygments
+skip_install = true
+commands = doc8 README.rst
+description = Run the doc8 tool to check the style of the README.rst file.
+
+[testenv:readme]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
+
 [testenv:docs]
 changedir = docs
 deps =
@@ -54,12 +116,9 @@ commands =
     coverage combine
     coverage report
 
-[testenv:readme]
-commands = rst-lint README.rst
-skip_install = true
-deps =
-    restructuredtext_lint
-    pygments
+####################
+# Deployment tools #
+####################
 
 [testenv:build]
 basepython = python3
