Update configuration for doc8 testing

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,6 @@ envlist =
     #pylint
     # documentation linters/checkers
     doc8
-    doc8-readme
     readme
     docs
     # the actual tests
@@ -78,16 +77,8 @@ deps =
     sphinx
     doc8
 commands =
-    doc8 docs/source/
+    doc8 docs/source/ README.rst
 description = Run the doc8 tool to check the style of the RST files in the project docs.
-
-[testenv:doc8-readme]
-deps =
-    doc8
-    pygments
-skip_install = true
-commands = doc8 README.rst
-description = Run the doc8 tool to check the style of the README.rst file.
 
 [testenv:readme]
 commands = rst-lint README.rst
