Better default positional arguments for tox testing
Allows commands like tox -e py27 tests/test_struct

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ envlist =
     coverage-report
 
 [testenv]
-commands = coverage run -p -m pytest --durations=20 tests {posargs}
+commands = coverage run -p -m pytest --durations=20 {posargs:tests}
 passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI DB
 deps =
     coverage
