--- a/tox.ini
+++ b/tox.ini
@@ -93,6 +93,7 @@ changedir = docs
 deps =
     sphinx
     sphinx_rtd_theme
+    sphinx-click
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
