Add bumpversion environment to tox
[skip ci]

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,12 @@ commands =
 # Deployment tools #
 ####################
 
+[testenv:bumpversion]
+commands = bumpversion {posargs}
+skip_install = true
+deps =
+    bumpversion
+
 [testenv:build]
 basepython = python3
 skip_install = true
