--- a/tox.ini
+++ b/tox.ini
@@ -23,15 +23,26 @@ envlist =
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 {posargs:tests}
-passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION NDEX_USERNAME NDEX_PASSWORD TRAVIS CI DB
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION TRAVIS CI DB
 deps =
     coverage
     pytest
     mock
     pathlib
     {env:PYBEL_TEST_CONNECTOR:}
-extras =
-    neo4j
+whitelist_externals =
+    /bin/cat
+    /bin/cp
+    /bin/mkdir
+
+[testenv:networkx2]
+commands =
+    pip install networkx>=2.1
+    pytest --durations=20 {posargs:tests}
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION
+deps =
+    pytest
+    {env:PYBEL_TEST_CONNECTOR:}
 whitelist_externals =
     /bin/cat
     /bin/cp
