--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ deps =
     flake8-import-order
     pep8-naming
 commands =
-    flake8 src/pybel/ tests/ setup.py
+    flake8 src/pybel/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:pylint]
