--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,25 @@ deps =
 commands =
     pylint src/pybel
 
+[testenv:radon]
+deps = radon
+skip_install = true
+commands = radon mi .
+description = Run the radon tool to calculate the maintainability indices of the project sources.
+
+[testenv:vulture]
+deps = vulture
+skip_install = true
+commands = vulture src/pybel
+description = Run the vulture tool to look for dead code.
+
+[testenv:xenon]
+deps = xenon
+skip_install = true
+commands = xenon --max-average A --max-modules A --max-absolute B .
+description = Run the xenon tool to monitor code complexity.
+
+
 [testenv:doc8]
 basepython = python3
 skip_install = true
