--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ envlist =
     manifest
     #flake8
     #pylint
+    pyroma
     # documentation linters/checkers
     doc8
     readme
@@ -85,6 +86,13 @@ skip_install = true
 commands = xenon --max-average A --max-modules A --max-absolute B .
 description = Run the xenon tool to monitor code complexity.
 
+[testenv:pyroma]
+deps =
+    pygments
+    pyroma
+skip_install = true
+commands = pyroma --min=10 .
+description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:doc8]
 basepython = python3
