--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,12 @@ envlist =
     manifest
     #flake8
     #pylint
-    pyroma
+    #pyroma
     # documentation linters/checkers
     doc8
     readme
     docs
     # the actual tests
-    py27
     py
     # always keep coverage-report last
     coverage-report
