--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,9 @@ envlist =
     coverage-clean
     # code linters/stylers
     manifest
-    #flake8
-    #pylint
-    #pyroma
+    flake8
+    pyroma
+    xenon
     # documentation linters/checkers
     doc8
     readme
@@ -62,7 +62,7 @@ description = Run the flake8 tool with several plugins (bandit, docstrings, impo
 [testenv:vulture]
 deps = vulture
 skip_install = true
-commands = vulture src/pybel
+commands = vulture src/pybel/
 description = Run the vulture tool to look for dead code.
 
 [testenv:xenon]
@@ -100,7 +100,7 @@ deps =
 changedir = docs
 deps =
     sphinx
-    sphinx_rtd_theme
+    sphinx-rtd-theme
     sphinx-click
 commands =
     mkdir -p {envtmpdir}
