Update installation of requirements in tox

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,8 @@ deps =
     mock
     pathlib
     {env:PYBEL_TEST_CONNECTOR:}
+extras =
+    schema
 whitelist_externals =
     /bin/cat
     /bin/cp
@@ -100,10 +102,8 @@ deps =
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-    sphinx-click
+extras =
+    docs
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
