Make setup declarative

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,9 +19,9 @@ values =
 [bumpverion:part:build]
 values = [0-9A-Za-z-]+
 
-[bumpversion:file:src/pybel/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+[bumpversion:file:setup.cfg]
+search = version = {current_version}
+replace = version = {new_version}
 
 [bumpversion:file:docs/source/conf.py]
 search = release = '{current_version}'
