--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,9 @@ envlist =
     coverage-clean
     # code linters/stylers
     manifest
+    pyroma
     flake8
-    pyroma
     xenon
-    vulture
-    pyroma
     # documentation linters/checkers
     doc8
     readme
@@ -29,9 +27,9 @@ passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION TRAVIS CI DB
 deps =
     coverage
     pytest
-    mock
-    pathlib
     {env:PYBEL_TEST_CONNECTOR:}
+extras =
+    tests
 whitelist_externals =
     /bin/cat
     /bin/cp
@@ -94,10 +92,8 @@ deps =
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-    sphinx-click
+extras =
+    docs
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
