Add python_requires to setup.cfg
References #286
References #285

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3 :: Only
 	Topic :: Scientific/Engineering :: Bio-Informatics
+	Topic :: Scientific/Engineering :: Chemistry
 keywords =
 	Biological Expression Language
 	BEL
@@ -64,6 +65,7 @@ install_requires =
 # Random options
 zip_safe = false
 include_package_data = True
+python_requires = >=3.5
 
 # Where is my code
 packages = find:
