--- a/setup.cfg
+++ b/setup.cfg
@@ -79,9 +79,7 @@ docs =
 	sphinx
 	sphinx-rtd-theme
 	sphinx-click
-tests =
-	mock
-	pathlib
+	sphinx-autodoc-typehints
 
 [options.entry_points]
 console_scripts =
