--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ envlist =
     pyroma
     flake8
     xenon
+    mypy
     # documentation linters/checkers
     doc8
     readme
@@ -28,8 +29,6 @@ deps =
     coverage
     pytest
     {env:PYBEL_TEST_CONNECTOR:}
-extras =
-    tests
 whitelist_externals =
     /bin/cat
     /bin/cp
@@ -72,6 +71,12 @@ deps =
 skip_install = true
 commands = pyroma --min=10 .
 description = Run the pyroma tool to check the project's package friendliness.
+
+[testenv:mypy]
+deps = mypy
+skip_install = true
+commands = mypy --ignore-missing-imports src/pybel/
+description = Run the mypy tool to check static typing on the project.
 
 [testenv:doc8]
 basepython = python3
