--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,6 @@ skip_install = true
 commands = check-manifest
 
 [testenv:flake8]
-basepython = python3
 skip_install = true
 deps =
     flake8
@@ -79,7 +78,6 @@ commands = mypy --ignore-missing-imports src/pybel/
 description = Run the mypy tool to check static typing on the project.
 
 [testenv:doc8]
-basepython = python3
 skip_install = true
 deps =
     sphinx
@@ -94,6 +92,7 @@ skip_install = true
 deps =
     restructuredtext_lint
     pygments
+description = Run the rst-lint tool to check the style of the README.
 
 [testenv:docs]
 changedir = docs
@@ -125,7 +124,6 @@ deps =
     bumpversion
 
 [testenv:build]
-basepython = python3
 skip_install = true
 deps =
     wheel
@@ -134,7 +132,6 @@ commands =
     python setup.py -q sdist bdist_wheel
 
 [testenv:release]
-basepython = python3
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -144,7 +141,6 @@ commands =
     twine upload --skip-existing dist/*
 
 [testenv:finish]
-basepython = python3
 skip_install = true
 whitelist_externals =
     /bin/git
