Allow tox to use git properly
[skip ci]

Reference: https://github.com/tox-dev/tox/issues/1081

--- a/tox.ini
+++ b/tox.ini
@@ -120,6 +120,7 @@ commands =
 [testenv:bumpversion]
 commands = bumpversion {posargs}
 skip_install = true
+passenv = HOME
 deps =
     bumpversion
 
@@ -142,9 +143,6 @@ commands =
 
 [testenv:finish]
 skip_install = true
-whitelist_externals =
-    /bin/git
-    /usr/local/bin/git
 deps =
     {[testenv:build]deps}
     {[testenv:release]deps}
