Excise bel_resources
Functionality has been moved to https://github.com/cthoyt/bel-resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
     sqlalchemy
     click
     click-plugins
-    multisplitby
+    bel_resources
     requests
     requests_file
     pyparsing
