--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+##########################
+# Setup.py Configuration #
+##########################
 [metadata]
 name = pybel
 version = 0.13.0-dev
@@ -100,3 +103,40 @@ pybel.file_exporter:
 	nodelink = pybel.io:to_json_file
 	bytes = pybel.io:to_pickle
 	bel = pybel.canonicalize:to_bel
+
+######################
+# Doc8 Configuration #
+# (doc8.ini)         #
+######################
+[doc8]
+max-line-length = 120
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = pybel
+omit =
+    src/pybel/__main__.py
+    src/pybel/cli.py
+    src/pybel/io/indra.py
+    src/pybel/io/web.py
+    src/pybel/resources/arty.py
+    src/pybel/resources/deploy.py
+    src/pybel/resources/defaults.py
+    tests/*
+    docs/*
+    scripts/*
+
+[coverage:paths]
+source =
+    src/pybel
+    .tox/*/lib/python*/site-packages/pybel
+
+[coverage:report]
+show_missing = True
+exclude_lines =
+    def __str__
+    def __repr__
