--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ maintainer = Charles Tapley Hoyt
 maintainer_email = charles.hoyt@scai.fraunhofer.de
 
 # License Information
-# license = Apache Software License
+license = Apache 2.0 License
 license_file = LICENSE
 
 # Search tags
