--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,7 @@ deps =
     pyroma
 skip_install = true
 commands = pyroma --min=10 .
-description = Run the pyroma tool to check the project's package friendliness.
+description = Run the pyroma tool to check the package friendliness of the project.
 
 [testenv:mypy]
 deps = mypy
