--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -27,7 +27,7 @@ replace = version = {new_version}
 search = release = '{current_version}'
 replace = release = '{new_version}'
 
-[bumpversion:file:src/pybel/constants.py]
+[bumpversion:file:src/pybel/version.py]
 search = VERSION = '{current_version}'
 replace = VERSION = '{new_version}'
 
