--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,12 @@
 graft src
 graft tests
 prune scripts
+prune docs/source/tutorials/.ipynb_checkpoints
 
 recursive-include docs/source *.py
 recursive-include docs/source *.rst
 recursive-include docs/source *.ipynb
+recursive-include docs/source *.png
 recursive-include src/pybel/testing/bel *.bel
 recursive-include src/pybel/testing/belanno *.belanno
 recursive-include src/pybel/testing/belns *.belns
