Code cleanup, update license, and remove xenon from tox
Improve flake8, add trailing commas, more type annotations

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ version = 0.13.3-dev
 description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL)
 long_description = file: README.rst
 
-# URLs associated with PyBEL
+# URLs associated with the project
 url = https://github.com/pybel/pybel
 download_url = https://github.com/pybel/pybel/releases
 project_urls =
@@ -17,21 +17,21 @@ project_urls =
 
 # Author information
 author = Charles Tapley Hoyt
-author_email = charles.hoyt@scai.fraunhofer.de
+author_email = cthoyt@gmail.com
 maintainer = Charles Tapley Hoyt
-maintainer_email = charles.hoyt@scai.fraunhofer.de
+maintainer_email = cthoyt@gmail.com
 
 # License Information
-license = Apache 2.0 License
+license = MIT
 license_file = LICENSE
 
 # Search tags
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Science/Research
-    License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3.7
@@ -125,9 +125,6 @@ omit =
     src/pybel/cli.py
     src/pybel/io/indra.py
     src/pybel/io/web.py
-    src/pybel/resources/arty.py
-    src/pybel/resources/deploy.py
-    src/pybel/resources/defaults.py
     tests/*
     docs/*
     scripts/*
