--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ environment:
 build: off
 
 install:
-  - "%PYTHON%\\python.exe -m pip install --upgrade"
+  - "%PYTHON%\\python.exe -m pip install --upgrade pip"
   - "%PYTHON%\\python.exe -m pip install tox --no-warn-script-location"
 
 test_script:
