--- a/setup.cfg
+++ b/setup.cfg
@@ -88,21 +88,21 @@ docs =
 console_scripts =
     pybel = pybel.cli:main
 pybel.object_importer =
-    nodelink = pybel.io:from_json
+    nodelink = pybel.io:from_nodelink_json
     bytes = pybel.io:from_bytes
-    bel = pybel:from_path
+    bel = pybel:from_bel_script
 pybel.file_importer:
-    nodelink = pybel.io:from_json_file
+    nodelink = pybel.io:from_nodelink_json_file
     bytes = pybel.io:from_pickle
     bel = pybel:from_lines
 pybel.object_exporter:
-    nodelink = pybel.io:to_json
+    nodelink = pybel.io:to_nodelink_json
     bytes = pybel.io:to_bytes
     bel = pybel.canonicalize:to_bel_lines
 pybel.file_exporter:
-    nodelink = pybel.io:to_json_file
+    nodelink = pybel.io:to_nodelink_json_file
     bytes = pybel.io:to_pickle
-    bel = pybel.canonicalize:to_bel
+    bel = pybel.canonicalize:to_bel_script
 
 ######################
 # Doc8 Configuration #
