--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ install_requires =
     sqlalchemy
     click
     click-plugins
-    bel_resources
+    bel_resources @ git+https://www.github.com/pybel/bel-resources.git
     requests
     requests_file
     pyparsing
