--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ deps =
     flake8-colors
     flake8-docstrings
     flake8-import-order
+    flake8-bugbear
     pep8-naming
     pydocstyle==3.0.0
 commands =
