--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ deps =
     flake8-import-order
     flake8-bugbear
     pep8-naming
-    pydocstyle==3.0.0
+    pydocstyle
 commands =
     flake8 src/pybel/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
