--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,8 @@ deps =
     coverage
     pytest
     {env:PYBEL_TEST_CONNECTOR:}
+extras =
+    jupyter
 whitelist_externals =
     /bin/cat
     /bin/cp
