Update bel_resources requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ install_requires =
     sqlalchemy
     click
     click-plugins
-    bel_resources @ git+https://www.github.com/pybel/bel-resources.git
+    bel_resources>=0.0.3
     requests
     requests_file
     pyparsing
