Update doc8 testing
[skip ci]

--- a/tox.ini
+++ b/tox.ini
@@ -87,7 +87,7 @@ deps =
     sphinx
     doc8
 commands =
-    doc8 docs/source/ README.rst
+    doc8 docs/source/ AUTHORS.rst CHANGELOG.rst CONTRIBUTING.rst README.rst
 description = Run the doc8 tool to check the style of the RST files in the project docs.
 
 [testenv:readme]
