--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = pybel
-version = 0.14.3
+version = 0.14.4-dev
 description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL)
 long_description = file: README.rst
 
