Improve graphdati utilities for storage in jsonl and chunked upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ install_requires =
     click
     click-plugins
     bel_resources>=0.0.3
+    more_itertools
     requests
     requests_file
     pyparsing
