--- a/setup.cfg
+++ b/setup.cfg
@@ -100,13 +100,29 @@ pybel.file_importer:
     bytes = pybel.io:from_pickle
     bel = pybel:from_lines
 pybel.object_exporter:
-    nodelink = pybel.io:to_nodelink_json
+    nodelink = pybel.io:to_nodelink
+    umbrella_nodelink = pybel.io:to_umbrella_nodelink
+    graphdati = pybel.io:to_graphdati
+    cx = pybel.io:to_cx
+    jgif = pybel.io:to_jgif
     bytes = pybel.io:to_bytes
     bel = pybel.canonicalize:to_bel_lines
 pybel.file_exporter:
-    nodelink = pybel.io:to_nodelink_json_file
+    nodelink = pybel.io:to_nodelink_file
+    nodelink_gz = pybel.io:to_nodelink_gz
+    cx = pybel.io:to_cx_file
+    cx_gz = pybel.io:to_cx_gz
+    graphdati = pybel.io:to_graphdati_file
+    graphdati_gz = pybel.io:to_graphdati_gz
+    jgif = pybel.io:to_jgif_file
+    jgif_gz = pybel.io:to_jgif_gz
+    umbrella_nodelink = pybel.io:to_umbrella_nodelink_file
+    umbrella_nodelink_gz = pybel.io:to_umbrella_nodelink_gz
     bytes = pybel.io:to_pickle
     bel = pybel.canonicalize:to_bel_script
+    bel_gz = pybel.canonicalize:to_bel_script_gz
+    tsv = pybel.io:to_tsv
+    gsea = pybel.io:to_gsea
 
 ######################
 # Doc8 Configuration #
