Add PyKEEN import hooks

--- a/setup.cfg
+++ b/setup.cfg
@@ -124,6 +124,20 @@ pybel.file_exporter:
     tsv = pybel.io:to_tsv
     gsea = pybel.io:to_gsea
 
+# Importers for PyKEEN
+pykeen.triples.extension_importer =
+    # Import BEL script to PyKEEN
+    bel               = pybel.io.pykeen:get_triples_from_bel
+    # Import BEL Graph pickle to PyKEEN
+    bel.gpickle       = pybel.io.pykeen:get_triples_from_bel_pickle
+    bel.pickle        = pybel.io.pykeen:get_triples_from_bel_pickle
+    bel.pkl           = pybel.io.pykeen:get_triples_from_bel_pickle
+    # Import BEL NodeLink JSON to PyKEEN
+    bel.nodelink.json = pybel.io.pykeen:get_triples_from_bel_nodelink
+pykeen.triples.prefix_importer =
+    # Import BEL from BEL Commons to PyKEEN
+    bel-commons       = pybel.io.pykeen:get_triples_from_bel_commons
+
 ######################
 # Doc8 Configuration #
 # (doc8.ini)         #
