--- a/setup.cfg
+++ b/setup.cfg
@@ -92,38 +92,40 @@ docs =
 [options.entry_points]
 console_scripts =
     pybel = pybel.cli:main
-pybel.object_importer =
-    nodelink = pybel.io:from_nodelink_json
-    bytes = pybel.io:from_bytes
-    bel = pybel:from_bel_script
-pybel.file_importer:
-    nodelink = pybel.io:from_nodelink_json_file
-    bytes = pybel.io:from_pickle
-    bel = pybel:from_lines
-pybel.object_exporter:
-    nodelink = pybel.io:to_nodelink
-    umbrella_nodelink = pybel.io:to_umbrella_nodelink
-    graphdati = pybel.io:to_graphdati
-    cx = pybel.io:to_cx
-    jgif = pybel.io:to_jgif
-    bytes = pybel.io:to_bytes
-    bel = pybel.canonicalize:to_bel_lines
-pybel.file_exporter:
-    nodelink = pybel.io:to_nodelink_file
-    nodelink_gz = pybel.io:to_nodelink_gz
-    cx = pybel.io:to_cx_file
-    cx_gz = pybel.io:to_cx_gz
-    graphdati = pybel.io:to_graphdati_file
-    graphdati_gz = pybel.io:to_graphdati_gz
-    jgif = pybel.io:to_jgif_file
-    jgif_gz = pybel.io:to_jgif_gz
-    umbrella_nodelink = pybel.io:to_umbrella_nodelink_file
-    umbrella_nodelink_gz = pybel.io:to_umbrella_nodelink_gz
-    bytes = pybel.io:to_pickle
-    bel = pybel.canonicalize:to_bel_script
-    bel_gz = pybel.canonicalize:to_bel_script_gz
-    tsv = pybel.io:to_tsv
-    gsea = pybel.io:to_gsea
+pybel.importer =
+    bel                   = pybel.io.lines:from_bel_script
+    bel.gz                = pybel.io.lines:from_bel_script_gz
+    bel.nodelink.json     = pybel.io.nodelink:from_nodelink_file
+    bel.nodelink.json.gz  = pybel.io.nodelink:from_nodelink_gz
+    bel.cx.json           = pybel.io.cx:from_cx_file
+    bel.cx.json.gz        = pybel.io.cx:from_cx_gz
+    bel.jgif.json         = pybel.io.jgif:from_jgif_file
+    bel.jgif.json.gz      = pybel.io.jgif:from_jgif_gz
+    bel.pickle            = pybel.io.gpickle:from_pickle
+    bel.gpickle           = pybel.io.gpickle:from_pickle
+    bel.pkl               = pybel.io.gpickle:from_pickle
+    indra.json            = pybel.io.indra:from_indra_statements_json_file
+
+pybel.exporter =
+    bel                   = pybel.canonicalize:to_bel_script
+    bel.gz                = pybel.canonicalize:to_bel_script_gz
+    bel.nodelink.json     = pybel.io.nodelink:to_nodelink_file
+    bel.nodelink.json.gz  = pybel.io.nodelink:to_nodelink_gz
+    bel.cx.json           = pybel.io.cx:to_cx_file
+    bel.cx.json.gz        = pybel.io.cx:to_cx_gz
+    bel.graphdati.json    = pybel.io.graphdati:to_graphdati_file
+    bel.graphdati.json.gz = pybel.io.graphdati:to_graphdati_gz
+    bel.jgif.json         = pybel.io.jgif:to_jgif_file
+    bel.jgif.json.gz      = pybel.io.jgif:to_jgif_gz
+    bel.pickle            = pybel.io.gpickle:to_pickle
+    bel.gpickle           = pybel.io.gpickle:to_pickle
+    bel.pkl               = pybel.io.gpickle:to_pickle
+    indra.json            = pybel.io.indra:to_indra_statements_json_file
+    # No re-import
+    bel.unodelink.json    = pybel.io.umbrella_nodelink:to_umbrella_nodelink_file
+    bel.unodelink.json.gz = pybel.io.umbrella_nodelink:to_umbrella_nodelink_gz
+    tsv                   = pybel.io.tsv.api:to_tsv
+    gsea                  = pybel.io.extras:to_gsea
 
 # Importers for PyKEEN
 pykeen.triples.extension_importer =
