--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,5 @@ tags
 [._]*.un~
 
 .mypy_cache
+notebooks/hipathia_demo/covid19/covid19.bel.nodelink.json
+notebooks/hipathia_demo/hemekg/hemekg.bel.nodelink.json
