--- a/setup.cfg
+++ b/setup.cfg
@@ -99,6 +99,8 @@ pybel.importer =
     bel.nodelink.json.gz  = pybel.io.nodelink:from_nodelink_gz
     bel.cx.json           = pybel.io.cx:from_cx_file
     bel.cx.json.gz        = pybel.io.cx:from_cx_gz
+    bel.graphdati.json    = pybel.io.graphdati:from_graphdati_file
+    bel.graphdati.json.gz = pybel.io.graphdati:from_graphdati_gz
     bel.jgif.json         = pybel.io.jgif:from_jgif_file
     bel.jgif.json.gz      = pybel.io.jgif:from_jgif_gz
     bel.pickle            = pybel.io.gpickle:from_pickle
