--- a/tox.ini
+++ b/tox.ini
@@ -101,6 +101,8 @@ description = Run the rst-lint tool to check the style of the README.
 changedir = docs
 extras =
     docs
+    jupyter
+    grounding
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
