--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,4 @@ tags
 .mypy_cache
 
 # Testing SBGN files
-src/pybel/io/sbgnml/*.xml.sbgn
-src/pybel/io/sbgnml/*.xml
-src/pybel/io/sbgnml/*.json
+sbgn_tests/*
