--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ tags
 .mypy_cache
 notebooks/hipathia_demo/covid19/covid19.bel.nodelink.json
 notebooks/hipathia_demo/hemekg/hemekg.bel.nodelink.json
+notebooks/hipathia_demo/cbn/source
+notebooks/hipathia_demo/cbn/Human-2.0.zip
