Update underlying scripts

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ notebooks/hipathia_demo/covid19/covid19.bel.nodelink.json
 notebooks/hipathia_demo/hemekg/hemekg.bel.nodelink.json
 notebooks/hipathia_demo/cbn/source
 notebooks/hipathia_demo/cbn/Human-2.0.zip
+notebooks/hipathia_demo/covid19/covid19-grounded.bel.nodelink.json
